@@ -332,7 +332,7 @@ public class FindCapturedVars extends ExpWalker
     if (decl.getFlag(Declaration.IS_UNKNOWN))
       {
 	Type type = getCompilation().getLanguage().getTypeFor(exp);
-	if (type instanceof Externalizable)
+	if (type instanceof Externalizable && ! exp.getDontDereference())
 	  return new QuoteExp(type);
 
 	if (comp.getBooleanOption("warn-undefined-variable", false))
